--- a/index.html
+++ b/index.html
@@ -3,92 +3,178 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=, initial-scale=1.0" />
-    <title>Document</title>
+    <title>WebStudio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
+      integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <header>
       <nav>
-        <a href="./index.html">WebStudio</a>
+        <a class="logo" href="./index.html"
+          >Web<span class="logo-part">Studio</span></a
+        >
         <ul>
-          <li><a href="">Studio</a></li>
-          <li><a href="">Portfolio</a></li>
-          <li><a href="">Contacts</a></li>
+          <li><a class="nav-link" href="">Studio</a></li>
+          <li><a class="nav-link" href="">Portfolio</a></li>
+          <li><a class="nav-link" href="">Contacts</a></li>
         </ul>
       </nav>
-      <address>
+      <address class="address">
         <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+          <li>
+            <a class="address-link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li>
+            <a class="address-link" href="tel:+110001111111"
+              >+11 (000) 111-11-11</a
+            >
+          </li>
         </ul>
       </address>
     </header>
     <main>
-      <section>
+      <section class="section-up">
         <h1>Effective Solutions for Your Business</h1>
 
         <button type="button">Order Service</button>
       </section>
       <section>
-        <h2>content</h2>
+        <h2>Benefits</h2>
         <ul>
           <li>
-            <h3>Strategy</h3>
-            <p>
+            <h3 class="title">Strategy</h3>
+            <p class="text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h3>Punctuality</h3>
-            <p>
+            <h3 class="title">Punctuality</h3>
+            <p class="text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h3>Diligence</h3>
-            <p>
+            <h3 class="title">Diligence</h3>
+            <p class="text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h3>Technologies</h3>
-            <p>
+            <h3 class="title">Technologies</h3>
+            <p class="text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
           </li>
         </ul>
       </section>
-      <section>
+      <section class="section-team">
         <h2>Our Team</h2>
         <ul>
           <li>
             <img src="./images/piople/img-1.jpg" alt="mark" width="264" />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="section-team-title">Mark Guerrero</h3>
+            <p class="section-team-text">Product Designer</p>
           </li>
           <li>
             <img src="./images/piople/img-2.jpg" alt="tom" width="264" />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="section-team-title">Tom Ford</h3>
+            <p class="section-team-text">Frontend Developer</p>
           </li>
           <li>
             <img src="./images/piople/img-3.jpg" alt="camila" width="264" />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="section-team-title">Camila Garcia</h3>
+            <p class="section-team-text">Marketing</p>
           </li>
           <li>
             <img src="./images/piople/img-4.jpg" alt="daniel" width="264" />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="section-team-title">Daniel Wilson</h3>
+            <p class="section-team-text">UI Designer</p>
           </li>
+        </ul>
+      </section>
+      <section class="section-portfolio">
+        <h2>Our Portfolio</h2>
+        <ul>
+          <li>
+            <img
+              src="images/portfolio/img6.jpg"
+              alt="Banking-App"
+              width="360"
+            />
+          </li>
+          <h3 class="section-portfolio-title">Banking App</h3>
+          <p class="section-portfolio-text">App</p>
+          <li>
+            <img
+              src="images/portfolio/img7.jpg"
+              alt="Cashless-Payment"
+              width="360"
+            />
+          </li>
+          <h3 class="section-portfolio-title">Cashless Payment</h3>
+          <p class="text">Marketing</p>
+          <li>
+            <img
+              src="images/portfolio/img8.jpg"
+              alt="Meditation-App"
+              width="360"
+            />
+          </li>
+          <h3 class="section-portfolio-title">Meditation App</h3>
+          <p class="text">App</p>
+          <li>
+            <img
+              src="images/portfolio/img9.jpg"
+              alt="Taxi Service"
+              width="360"
+            />
+          </li>
+          <h3 class="section-portfolio-title">Taxi Service</h3>
+          <p class="section-portfolio-text">Marketing</p>
+          <li>
+            <img
+              src="images/portfolio/img10.jpg"
+              alt="Screen Illustrations"
+              width="360"
+            />
+          </li>
+          <h3 class="section-portfolio-title">Screen Illustrations</h3>
+          <p class="section-portfolio-text">Design</p>
+          <li>
+            <img
+              src="images/portfolio/img11.jpg"
+              alt="Online Courses"
+              width="360"
+            />
+          </li>
+          <h3 class="section-portfolio-title">Online Courses</h3>
+          <p class="section-portfolio-text">Marketing</p>
         </ul>
       </section>
     </main>
     <footer>
-      <a href="./index.html">WebStudio</a>
+      <a class="logo" href="./index.html"
+        >Web<span class="logo-part-white">Studio</span></a
+      >
+
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
