--- a/index.html
+++ b/index.html
@@ -48,12 +48,12 @@
     </header>
     <main>
       <section class="section-up">
-        <h1>Effective Solutions for Your Business</h1>
+        <h1 class="big-title">Effective Solutions for Your Business</h1>
 
-        <button type="button">Order Service</button>
+        <button class="order" type="button">Order Service</button>
       </section>
       <section>
-        <h2>Benefits</h2>
+        <h2 class="smaller-title">Benefits</h2>
         <ul>
           <li>
             <h3 class="title">Strategy</h3>
@@ -86,8 +86,8 @@
         </ul>
       </section>
       <section class="section-team">
-        <h2>Our Team</h2>
-        <ul>
+        <h2 class="smaller-title">Our Team</h2>
+        <ul class="list">
           <li>
             <img src="./images/piople/img-1.jpg" alt="mark" width="264" />
             <h3 class="section-team-title">Mark Guerrero</h3>
@@ -111,7 +111,7 @@
         </ul>
       </section>
       <section class="section-portfolio">
-        <h2>Our Portfolio</h2>
+        <h2 class="smaller-title">Our Portfolio</h2>
         <ul>
           <li>
             <img
@@ -129,7 +129,7 @@
               width="360"
             />
             <h3 class="section-portfolio-title">Cashless Payment</h3>
-            <p class="text">Marketing</p>
+            <p class="section-portfolio-text">Marketing</p>
           </li>
           <li>
             <img
@@ -138,7 +138,7 @@
               width="360"
             />
             <h3 class="section-portfolio-title">Meditation App</h3>
-            <p class="text">App</p>
+            <p class="section-portfolio-text">App</p>
           </li>
           <li>
             <img
@@ -170,12 +170,12 @@
         </ul>
       </section>
     </main>
-    <footer>
+    <footer class="down">
       <a class="logo" href="./index.html"
         >Web<span class="logo-part-white">Studio</span></a
       >
 
-      <p>
+      <p class="inform">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
