--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
           >Web<span class="logo-part">Studio</span></a
         >
         <ul>
-          <li><a class="nav-link" href="">Studio</a></li>
-          <li><a class="nav-link" href="">Portfolio</a></li>
-          <li><a class="nav-link" href="">Contacts</a></li>
+          <li><a class="nav-link" href="./index.html">Studio</a></li>
+          <li><a class="nav-link" href="./index.html">Portfolio</a></li>
+          <li><a class="nav-link" href="./index.html">Contacts</a></li>
         </ul>
       </nav>
       <address class="address">
@@ -87,23 +87,23 @@
       </section>
       <section class="section-team">
         <h2 class="smaller-title">Our Team</h2>
-        <ul class="list">
-          <li>
+        <ul>
+          <li class="list-team">
             <img src="./images/piople/img-1.jpg" alt="mark" width="264" />
             <h3 class="section-team-title">Mark Guerrero</h3>
             <p class="section-team-text">Product Designer</p>
           </li>
-          <li>
+          <li class="list-team">
             <img src="./images/piople/img-2.jpg" alt="tom" width="264" />
             <h3 class="section-team-title">Tom Ford</h3>
             <p class="section-team-text">Frontend Developer</p>
           </li>
-          <li>
+          <li class="list-team">
             <img src="./images/piople/img-3.jpg" alt="camila" width="264" />
             <h3 class="section-team-title">Camila Garcia</h3>
             <p class="section-team-text">Marketing</p>
           </li>
-          <li>
+          <li class="list-team">
             <img src="./images/piople/img-4.jpg" alt="daniel" width="264" />
             <h3 class="section-team-title">Daniel Wilson</h3>
             <p class="section-team-text">UI Designer</p>
@@ -171,6 +171,7 @@
       </section>
     </main>
     <footer class="down">
+      class="list-team"
       <a class="logo" href="./index.html"
         >Web<span class="logo-part-white">Studio</span></a
       >
