--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
       <section class="section-team">
         <h2 class="smaller-title">Our Team</h2>
         <ul>
-          <li>
+          <l class="list-team">
             <img src="./images/piople/img-1.jpg" alt="mark" width="264" />
             <h3 class="section-team-title">Mark Guerrero</h3>
             <p class="section-team-text">Product Designer</p>
