--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
         >Web<span class="logo-part-white">Studio</span></a
       >
 
-      <p class="inform">
+      <p class="informe">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
